--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="sel"></div>
 		</div>
 	</div>
-	<button onclick="xo.func.restart(xo.el.squares)">Restart Game</button>
+	<button onclick="xo.func.restart(xo.el.squares)">Restart</button>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
